<resources>
    <string name="app_name">Restaurant finder</string>
    <string name="action_settings">1</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_places_maps">Map</string>
    <string name="title_activity_places_maps2">Map</string>
    <string name="food_name">1</string>
    <string name="food_name_hint">1</string>
    <string name="food_portion">1</string>
    <string name="food_fiber">fiber</string>
    <string name="food_fat">fat</string>
    <string name="food_carbs_hint">carbohydrates</string>
    <string name="food_carbs">Carbohydrates</string>
    <string name="food_protein_hint">Protien</string>
    <string name="food_protein">protien</string>
    <string name="food_macronutrients">Macro nutrients</string>
    <string name="food_portion_hint">food portion</string>
    <string name="label_btn_find">place</string>
    <string name="height">Height , cm</string>
    <string name="weight">Weight , kg</string>
    <string name="sex">Male ,Female</string>
    <string name="btn_cal">Counted</string>
    <string name="btn_share">Share Results</string>
    <string name="result">Your body mass index：</string>
    <string name="share_title">Body mass report</string>
    <string name="share_result">I just use dietplanner：</string>
    <string name="share_suggest">It is recommended that given：</string>
    <string name="share_invite">You have to try it！</string>
    <string name="exit">drop out</string>
    <string name="about">on</string>
    <string name="about_msg">	</string>
    <string name="textTitle">Calorie counter</string>
    <string name="buttonAdd">Add</string>
    <string name="buttonOverview">History</string>
    <string name="textSummaryCal">&quot;Kcal today: &quot;</string>
    <string name="textSummaryProt"> proteins today:</string>
    <string name="testNumber">1234</string>
    <string name="textNutName">Name of food</string>
    <string name="textNutGram">Amount in grams</string>
    <string name="textNutCal">Amount of Cal per 100gram</string>
    <string name="textNutProt">Amount of protien per 100g</string>
    <string name="buttonBack">Back</string>
    <string name="textTitleOverview">Breakdown by date:</string>
    <string name="textColumns">date\    \    \    \    \    \    \    \   \    \    \    \    \    \    \  \  \  \  \ Kcal  \    \  \    \    proteins</string>


</resources>
